--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
         </div>
 
         <div class="roster-cards-container">
+          <div class="student-card" id="david-holton-card">
+            <a href="students/david-holton.html">
+              <div class="view-profile-div">
+                <h3 class="view-profile-text">View Profile</h3>
+              </div>
+              <div class="card-text-container">
+                <h4 class="student-name">David Holton</h4>
+                <p class="student-location">St Petersburg, FL</p>
+              </div>
+            </a>
+          </div>
+
+        <div class="roster-cards-container">
           <div class="student-card" id="alyssa-sidebottom-card">
             <a href="students/alyssa-sidebottom.html">
               <div class="view-profile-div">
